infra/static-assets/maintenance-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-assets
  annotations:
    konghq.com/host-header: "static"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: static-assets
