infra/static-assets/static-assets-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-route
  annotations:
    konghq.com/host-header: "default-route"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: static-assets
