infra/static-assets/maintenance-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-assets-ingress
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/preserve-host: "false"
spec:
  ingressClassName: kong
  rules:
    - host: platform.int.youwol.com
      http:
        paths:
          - backend:
              service:
                name: static-assets
                port:
                  name: http
            pathType: Prefix
            path: /static
