infra/static-assets/static-assets-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-route-ingress
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/preserve-host: "false"
spec:
  ingressClassName: kong
  defaultBackend:
    service:
      name: default-route
      port:
        name: http
